--- a/webview-rust/wuzei/src/index_vue.html
+++ b/webview-rust/wuzei/src/index_vue.html
@@ -9,6 +9,8 @@
       <div>title<input type="text" v-model="title"></div>
       <div>date<input type="text" v-model="date"></div>
       <div>path : {{path}}</div>
+      <button @click="message">message</button>
+      <button @click="remove">削除</button>
     </div>
     <custom-tag name="hoge"/>
     <script>
@@ -16,24 +18,55 @@
       window.addEventListener("load", () => console.log("load"));
     </script>
   </body>
-  <script>
+  <script type="module">
     console.log("index.html")
+    // function animationFramePromise() {
+    //   return new Promise<number>((resolve) => {
+    //     globalThis.requestAnimationFrame(resolve);
+    //   });
+    // }
+    // function delay(ms) {
+    //   return new Promise<number>((resolve) => {
+    //     globalThis.setTimeout(resolve, ms);
+    //   });
+    // }
 
-    const onClickFunc1 = () =>{
-      const dst = { type : "message", payload : "hoge" }
-      window.ipc.postMessage(JSON.stringify(dst))
-    };
-    const onClickFunc2 = () =>{
-      const dst = { type : "test-2", payload : "hoge" }
-      window.ipc.postMessage(JSON.stringify(dst))
-    };
-    console.log(window)
-    console.log(window.ipc)
-    window.chrome.webview.addEventListener('message', (e) => {
-      console.log('message', e)
-    });
-    window.chrome.webview.addEventListener('propertyChanged', (e) => {
-      console.log('propertyChanged', e)
-    });
+    // var timer = Date.now();
+    // while (true) {
+    //   await delay(1000);
+    //   await animationFramePromise(); // この行で、次の更新タイミングまで待つ
+    //   console.log(timer - Date.now()); //経過時刻を取得
+    // }
+
+    const app = window.Vue.createApp({
+      setup() {
+        const { fromEvent, filter } = window.rxjs;
+
+        const uri = window.Vue.ref('null');
+        const title = window.Vue.ref('null');
+        const date = window.Vue.ref('null');
+        const path = window.Vue.computed(() => date.value + "_" + title.value);
+        
+        const message = () => {
+          const dst = { type : "message", payload : "hoge" }
+          window.ipc.postMessage(JSON.stringify(dst))
+        }
+
+        const newWindowReq$ = fromEvent(window.chrome.webview, 'newWindowReq');
+        newWindowReq$.subscribe(async (e) => {
+          // window.Wvvm.dispatch({ type : "dragAndDrop", payload: [e.detail.Uri] })
+          // window.Wvvm.dispatch({ type : "message", payload: e.detail.Uri })
+          // window.Wvvm.dispatch({ type : "changeText", payload: e.detail.Uri })
+          uri.value = e.detail.payload;
+          console.log('newWindowReq', e)
+        });
+        const namedPipe$ = fromEvent(window.chrome.webview, 'namedPipe');
+        namedPipe$.subscribe(async (e) => {
+          console.log('namedPipe', e.detail)
+        });
+
+        return {uri, title, date, path, message}
+      }
+    }).mount('#app');
   </script>
 </html>
